--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-authlib==0.15.5
-flask-login==0.5.0
-flask==1.1.2
-googlemaps==4.6.0
-geopy==2.2.0
-requests==2.25.1
-numpy==1.20.1
-openweathermap==0.1.2
-pandas==1.2.4
-pytest==6.2.3
-setuptools==52.0.0
-scikit-learn==0.24.1
-itsdangerous==2.0.1
-[Placeholder - update as needed]
+tqdm==4.64.1
+pandas==1.3.5
+torch @ https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp38-cp38-linux_x86_64.whl
+matplotlib==3.5.3
+numpy==1.22.4
+scikit-learn==1.2.1
+transformers==4.26.1
+datasets==2.10.1
+librosa==0.8.1
+seaborn==0.11.2
+
